<resources>
    <string name="app_name">EasyBill</string>
    <string name="easy_bill">Easy Bill</string>
    <string name="btn_text_no_action_bar_version">无 Action Bar 版本</string>
    <string name="btn_text_have_action_bar_version">有 Action Bar 版本</string>
    <string name="et_text_username">用户名</string>
    <string name="et_text_password">密码</string>
    <string name="et_text_password2">重复密码</string>
    <string name="btn_text_login">登录</string>
    <string name="btn_text_register">注册</string>
    <string name="tv_text_no_account_create">无账号？新建之</string>
    <string name="title_activity_main">@string/app_name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tv_text_my_email">li396858359@163.com</string>
    <string name="text_earning">收入</string>
    <string name="text_expense">支出</string>
</resources>
