<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.hkllzh.easybill.ui.activity.LoginActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alexbrush"
        android:gravity="center"
        android:text="@string/easy_bill"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvAppName">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_text_username"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tilUsername">

        <EditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_text_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_text_login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="@id/tilPassword"
        app:layout_constraintRight_toRightOf="@id/tilPassword"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/tv_text_no_account_create"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

</android.support.constraint.ConstraintLayout>
